# jerryscript.esp

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Kconfig  README.md  idf_component.yml
examples/hello_world/: Makefile  README.md  sdkconfig.defaults
examples/hello_world/main/: main.c
